# Multi-Dimensional-Super-Gradient-Descent-MDSGD-

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
docs/: paper.tex
src/mdsgd/: __init__.py  alphanaut.py  cli.py  lightgbm_backend.py  stacking.py
src/mdsgd/src/mdsgd/: model_graph.py
tests/: test_imports.py
